--- a/docs/_includes/blog.html
+++ b/docs/_includes/blog.html
@@ -1,8 +1,4 @@
----
-layout: default
----
-
-<article class="posts">
+<div class="posts">
     <div class="entry">
         {{ content }}
     </div>
@@ -50,4 +46,4 @@ layout: default
         {% endif %}
     </div>
     {% endif %}
-</article>
+</div>
