--- a/docs/assets/style.scss
+++ b/docs/assets/style.scss
@@ -319,6 +319,16 @@ p > img {
   }
 }
 
+.site-description {
+  margin: -5px 0 0 0;
+  color: $gray;
+  font-size: 16px;
+
+  @include mobile {
+    margin: 3px 0;
+  }
+}
+
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
