--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
         <div class="container">
           <header class="masthead clearfix">
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/">Manifesto</a>
               <a href="{{ site.baseurl }}/blog">Blog</a>
               <a href="{{ site.baseurl }}/search">Search</a>
               <a href="{{ site.baseurl }}/about">About</a>
