--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,9 +22,9 @@
           <header class="masthead clearfix">
             <nav>
               <a href="{{ site.baseurl }}/">Manifesto</a>
-              <a href="{{ site.baseurl }}/blog">Blog</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/publicacoes">Publicações</a>
+              <a href="{{ site.baseurl }}/busca">Busca</a>
+              <a href="{{ site.baseurl }}/sobre">Sobre</a>
             </nav>
           </header>
         </div>
