--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% seo title=false %}
     {% include meta.html %}
 
@@ -23,8 +23,8 @@
             <nav>
               <a href="{{ site.baseurl }}/">Manifesto</a>
               <a href="{{ site.baseurl }}/publicacoes">Publicações</a>
+              <a href="{{ site.baseurl }}/categorias">Categorias</a>
               <a href="{{ site.baseurl }}/busca">Busca</a>
-              <a href="{{ site.baseurl }}/sobre">Sobre</a>
             </nav>
           </header>
         </div>
