--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,9 +22,9 @@
           <header class="masthead clearfix">
             <nav>
               <a href="{{ site.baseurl }}/">Manifesto</a>
-              <a href="{{ site.baseurl }}/publicacoes">Publicações</a>
-              <a href="{{ site.baseurl }}/categorias">Categorias</a>
-              <a href="{{ site.baseurl }}/busca">Busca</a>
+<!--              <a href="{{ site.baseurl }}/publicacoes">Publicações</a>-->
+<!--              <a href="{{ site.baseurl }}/categorias">Categorias</a>-->
+<!--              <a href="{{ site.baseurl }}/busca">Busca</a>-->
             </nav>
           </header>
         </div>
