--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,18 +17,18 @@
   <body>
     <div id="bar"></div>
     <div class="wrapper-container">
-      <div class="wrapper-masthead">
-        <div class="container">
-          <header class="masthead clearfix">
-            <nav>
-              <a href="{{ site.baseurl }}/">Manifesto</a>
+<!--      <div class="wrapper-masthead">-->
+<!--        <div class="container">-->
+<!--          <header class="masthead clearfix">-->
+<!--            <nav>-->
+<!--              <a href="{{ site.baseurl }}/">Manifesto</a>-->
 <!--              <a href="{{ site.baseurl }}/publicacoes">Publicações</a>-->
 <!--              <a href="{{ site.baseurl }}/categorias">Categorias</a>-->
 <!--              <a href="{{ site.baseurl }}/busca">Busca</a>-->
-            </nav>
-          </header>
-        </div>
-      </div>
+<!--            </nav>-->
+<!--          </header>-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
