--- a/docs/_includes/analytics.html
+++ b/docs/_includes/analytics.html
@@ -1,16 +1,5 @@
-<!--{% if site.google_analytics %}-->
-<!--	&lt;!&ndash; Google Analytics &ndash;&gt;-->
-<!--	<script>-->
-<!--		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-<!--		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-<!--		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-<!--		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
 
-<!--		ga('create', '{{ site.google_analytics }}', 'auto');-->
-<!--		ga('send', 'pageview', {-->
-<!--		  'page': '{{ site.baseurl }}{{ page.url }}',-->
-<!--		  'title': '{{ page.title | replace: "'", "\\'" }}'-->
-<!--		});-->
-<!--	</script>-->
-<!--	&lt;!&ndash; End Google Analytics &ndash;&gt;-->
-<!--{% endif %}-->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7D7FF3"
+				  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
