--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% include analytics_head.html %}
+
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% seo title=false %}
     {% include meta.html %}
@@ -11,12 +13,13 @@
 
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
-      {% if site.google_analytics and jekyll.environment == 'production' %}
-        {% include analytics_head.html %}
-      {% endif %}
+<!--      {% if site.google_analytics and jekyll.environment == 'production' %}-->
+<!--        {% include analytics_head.html %}-->
+<!--      {% endif %}-->
   </head>
 
   <body>
+    {% include analytics.html %}
     <div id="bar"></div>
     <div class="wrapper-container">
 <!--      <div class="wrapper-masthead">-->
