--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include analytics_head.html %}
-
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% seo title=false %}
     {% include meta.html %}
@@ -13,19 +11,10 @@
 
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
-<!--      {% if site.google_analytics and jekyll.environment == 'production' %}-->
-<!--        {% include analytics_head.html %}-->
-<!--      {% endif %}-->
+    {% include analytics_head.html %}
   </head>
 
   <body>
-    {% if site.google_analytics %}
-      <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7D7FF3"
-                height="0" width="0" style="display:none;visibility:hidden">
-        </iframe>
-      </noscript>
-    {% endif %}
     <div id="bar"></div>
     <div class="wrapper-container">
 <!--      <div class="wrapper-masthead">-->
@@ -55,5 +44,6 @@
         </div>
       </div>
     </div>
+    {% include analytics.html %}
   </body>
 </html>
