--- a/docs/_includes/analytics_head.html
+++ b/docs/_includes/analytics_head.html
@@ -1,4 +1,4 @@
-{% if site.google_analytics_ga4 %}
+<!--{% if site.google_analytics_ga4 %}-->
 <!--<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics_ga4 }}"></script>-->
 <!--<script>-->
 <!--    window.dataLayer = window.dataLayer || [];-->
@@ -7,10 +7,11 @@
 <!--    gtag('config', '{{ site.google_analytics_ga4 }}');-->
 <!--</script>-->
 <!-- Google Tag Manager -->
+
+<!-- End Google Tag Manager -->
+<!--{% endif %}-->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W7D7FF3');</script>
-<!-- End Google Tag Manager -->
-{% endif %}
