--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      {% include analytics_head.html %}
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% seo title=false %}
     {% include meta.html %}
@@ -11,13 +12,19 @@
 
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
-    {% include analytics_head.html %}
+
   </head>
 
   <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7D7FF3"
-                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7D7FF3"
+              height="0"
+              width="0"
+              style="display:none;
+              visibility:hidden">
+      </iframe>
+  </noscript>
   <!-- End Google Tag Manager (noscript) -->
     <div id="bar"></div>
     <div class="wrapper-container">
